# meteo_proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/commands/: archive.md  build.md  creative.md  plan.md  reflect.md  van.md
.github/workflows/: ci.yml
diagrams/: README.md  circuit_breaker_diagram.mmd  class_diagram.mmd  component_diagram.mmd  error_flow_diagram.mmd  flow_diagram.mmd  system_design_diagram.mmd
env/: .env.example
helm/weather-proxy/: Chart.yaml  values.yaml
helm/weather-proxy/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
memory-bank/: activeContext.md  progress.md  projectbrief.md  tasks.md
operations/git/: set_git_email_and_user.sh  set_git_remote.sh
operations/scripts/: test-ci.sh
run/: run_server.sh
src/weather_proxy/: __init__.py  app.py  config.py  shutdown.py
src/weather_proxy/middleware/: __init__.py  correlation.py  logging.py
src/weather_proxy/resilience/: __init__.py  circuit_breaker.py
src/weather_proxy/routes/: __init__.py  health.py  weather.py
src/weather_proxy/services/: __init__.py  cache_service.py  geocoding_service.py  weather_service.py
src/weather_proxy/utils/: metrics.py
task/: task.md  weather_forecast_api.md
tests/: __init__.py  conftest.py  test-ci.sh  test-helm.sh
tests/integration/: test_health_endpoint.py  test_weather_endpoint.py
tests/postman/: meteo_proxy.postman_collection.json
tests/unit/: test_app.py  test_cache_service.py  test_config.py  test_geocoding_service.py  test_weather_service.py
